--- a/app/client/templates/components/components.scss
+++ b/app/client/templates/components/components.scss
@@ -98,14 +98,22 @@
 
   display: block;
 
-  .sandstorm-button {
+  > * {
 
     display: inline-block;
     margin-right: $button-block-margin;
+    vertical-align: middle;
 
     &:last-child {
       margin-right: 0;
     }
+
+  }
+
+  > i {
+
+    font-size: 2.5rem;
+    line-height: 2.5rem;
 
   }
 
@@ -180,4 +188,35 @@
       }
     }
   }
+}
+
+.large-button {
+
+  font-size: $large-button-font-size;
+  padding-top: $large-button-padding-tb;
+  padding-bottom: $large-button-padding-tb;
+  padding-left: $large-button-padding-lr;
+  padding-right: $large-button-padding-lr;
+  background-color: $large-button-bg;
+  color: $large-button-text;
+  border-radius: $button-border-radius;
+  border: 1px solid $large-button-border;
+  cursor: pointer;
+
+  i {
+    color: $large-button-icon;
+  }
+
+  &.primary {
+
+    background-color: $large-button-primary-bg;
+    color: $large-button-primary-text;
+    border: 1px solid $large-button-primary-border;
+
+    i {
+      color: $large-button-primary-icon;
+    }
+
+  }
+
 }
