--- a/app/client/templates/components/menu.html
+++ b/app/client/templates/components/menu.html
@@ -17,7 +17,7 @@
       <div class="menu-text">Apps by Me</div>
     </a>
 
-    <a class="menu-link {{routeRoot '/upload'}} {{#unless currentUser}}disabled{{/unless}}">
+    <a class="menu-link {{routeRoot '/upload'}}" href="{{getPath 'upload'}}">
       <i class="icon-upload"></i>
       <div class="menu-text">Upload an App</div>
     </a>
