replaced cat image with correct one on apps by me page

--- a/app/client/templates/appsByMe/appsByMe.html
+++ b/app/client/templates/appsByMe/appsByMe.html
@@ -28,7 +28,7 @@
 
     <div class="top-section">
 
-      <img class="sandstorm-cat" src="/images/sand-cat.png" />
+      <img class="sandstorm-cat" src="/images/newapp_cat.svg" />
 
       <div class="bubble-container">
 
