added devel branch reactive-dict and updated london:body-class

--- a/app/client/stylesheets/main.scss
+++ b/app/client/stylesheets/main.scss
@@ -150,6 +150,8 @@ html {
 .rem-space-float {
   overflow: hidden;
   display: block !important;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
 
 .clearfix {
