--- a/app/client/templates/upload/upload.scss
+++ b/app/client/templates/upload/upload.scss
@@ -228,6 +228,12 @@
     font-size: 1.35rem;
     line-height: 1.4;
     padding-left: 1.5rem;
+    color: #555555;
+    min-width: 15rem;
+
+    > * {
+      margin-bottom: 2rem;
+    }
 
   }
 
