--- a/app/client/templates/upload/upload.html
+++ b/app/client/templates/upload/upload.html
@@ -10,6 +10,7 @@
 
   </div>
 
+  {{#with app}}
   <div class="upload-box">
 
     <div class="right-float">
@@ -35,13 +36,13 @@
         <div class="file-box">
 
           <div class="instruction">Please upload the *.spk file for your app.</div>
-          <div class="aside"><a href="https://github.com/sandstorm-io/sandstorm/wiki/Porting-Guide">What's an *.spk?</a></div>
+          <div class="aside"><a href="https://github.com/sandstorm-io/sandstorm/wiki/Porting-Guide" target="_blank">What's an *.spk?</a></div>
 
           <div class="spacer clearfix"></div>
 
-          <input type="text" placeholder="Browse" readonly="true" data-field="filename" class="filename" data-action="choose-file" value="{{filename}}" />
-          <input type="file" class="file-picker" data-action="file-picker" />
-          <div class="square-button dark rem-space-float" data-action="upload">Upload</div>
+          <input type="text" placeholder="Browse" readonly="true" data-field="filename" class="filename" data-action="choose-file" data-name="spk" value="{{filename}}" />
+          <input type="file" class="file-picker" data-action="file-picker" data-for="spk" accept=".spk" />
+          <div class="square-button dark rem-space-float" data-action="upload-spk">Upload</div>
 
         </div>
 
@@ -50,10 +51,10 @@
       <div class="half-col">
 
         <h3 class="title">Title</h3>
-        <input type="text" data-field="title" />
+        <input type="text" data-field="name" value="name" />
 
         <h3 class="title">Author</h3>
-        <div class="read-only">Kenton Varda (todo)</div>
+        <div class="read-only">{{getFullname author}}</div>
 
       </div>
 
@@ -66,23 +67,23 @@
       <div class="half-col">
 
         <h4 class="mini-title">Ported by</h4>
-        <div class="read-only">Kenton Varda (todo)</div>
+        <div class="read-only">{{getFullname author}}</div>
 
         <h4 class="mini-title">Code URL</h4>
-        <input type="text" data-field="code-url" />
+        <input type="text" data-field="codeLink" value="{{codeLink}}" />
 
         <h4 class="mini-title">License</h4>
-        <input type="text" data-field="license" />
+        <input type="text" data-field="license" value="{{license}}" />
 
         <h4 class="mini-title">Version</h4>
-        <input type="text" data-field="version" />
+        <input type="text" data-action="update-version" value="{{latestVersion}}" />
 
       </div>
 
       <div class="half-col">
 
         <h4 class="mini-title">Website</h4>
-        <input type="text" data-field="website" />
+        <input type="text" data-field="website" value="{{webLink}}" />
 
         {{> connectButton service="github"}}
         {{> connectButton service="google"}}
@@ -112,10 +113,12 @@
         <h3 class="title">Icon</h3>
 
         <div class="identicon-container">
-          <img src="{{identicon seedString size=5 scale=50}}" />
+          <img src="{{#if image}}{{image}}{{else}}{{identicon seedString size=5 scale=50}}{{/if}}" data-field="icon-image" />
           <div class="regenerate" data-action="regenerate-identicon"><i class="icon-rejected_dark"></i></div>
-          <div class="upload" data-action="upload-icon"><i class="icon-myapps"></i></div>
+          <div class="upload" data-action="choose-file" data-name="identicon"><i class="icon-myapps"></i></div>
         </div>
+
+        <input type="file" class="file-picker" data-action="file-picker" data-for="identicon" accept="image/*" />
 
         <div class="identicon-instructions">
           <div>For the best results, we suggest the icon be:</div>
@@ -151,10 +154,52 @@
 
       <h3 class="title">Screenshots</h3>
 
+      {{#each screenshots}}
+
+        <div class="screenshot-container">
+          <div class="screenshot" style="background-image: url('{{this}}')" data-action="change-screenshot"></div>
+          <div class="remove" data-action="remove-screenshot"><i class="icon-rejected_dark"></i></div>
+        </div>
+
+      {{/each}}
+      {{#each screenshotPlaceholders}}
+
+        <div class="screenshot-container">
+          <div class="screenshot placeholder" data-action="choose-file" data-name="screenshot">
+            <div class="contents">
+              <i class="icon-myapps"></i>
+              <div class="instruction">
+                Upload a Screenshot
+              </div>
+            </div>
+          </div>
+        </div>
+
+      {{/each}}
+
+      <input type="file" class="file-picker" data-action="file-picker" data-for="screenshot" accept="image/*" />
+
       <h3 class="title">Description</h3>
+
+      <textarea class="description" data-field="description" placeholder="What does your app do?">{{description}}</textarea>
+
+    </div>
+
+    <div class="right-float">
+
+      <div class="button-block">
+        <div class="sandstorm-button neutral" data-action="submit">
+          SUBMIT APP FOR REVIEW
+        </div>
+        <div class="sandstorm-button neutral">
+          SAVE
+        </div>
+        <i class="icon-garbage"></i>
+      </div>
 
     </div>
 
   </div>
+  {{/with}}
 
 </template>
