--- a/app/client/templates/installedApps/installedApps.html
+++ b/app/client/templates/installedApps/installedApps.html
@@ -28,7 +28,7 @@
 
         <div class="genre-other">
 
-          {{> appTable genre='Installed' installPage=true}}
+          {{> appTable genre='Installed' installPage=true reactive="true"}}
 
         </div>
 
