added app search functionality

--- a/app/client/templates/components/topbar.html
+++ b/app/client/templates/components/topbar.html
@@ -29,8 +29,8 @@
           </ul>
         </div>
 
-        <input class="search-box" type="text" />
-        <button class="search-button"><i class="icon-search"></i></button>
+        <input class="search-box" type="text" data-field="search-term" />
+        <button class="search-button" data-action="search-apps"><i class="icon-search"></i></button>
 
       </div>
 
