changed apps-by-me with no apps css

--- a/app/client/templates/appsByMe/appsByMe.html
+++ b/app/client/templates/appsByMe/appsByMe.html
@@ -41,16 +41,16 @@
 
       </div>
 
-    </div>
+      <div class="purpose">
+        Give this page a purpose:
+      </div>
 
-    <div class="purpose">
-      Give this page a purpose:
     </div>
 
     <div class="action-buttons">
 
       <div class="container">
-        <a class="primary large-button" href=""> <!-- TODO: add link to edit app -->
+        <a class="primary large-button" href="/upload">
           <i class="icon-myapps"></i>
           UPLOAD YOUR FIRST APP
         </a>
@@ -81,7 +81,7 @@
       <div class="left-float">
 
         <div class="button-block">
-          <a class="sandstorm-button primary" href="">
+          <a class="sandstorm-button primary" href="/upload">
             <i class="icon-myapps"></i>
             UPLOAD NEW APP
           </a>
