some responsive css on apps-by-me page

--- a/app/client/templates/components/app-item-full-width.scss
+++ b/app/client/templates/components/app-item-full-width.scss
@@ -101,6 +101,10 @@
           line-height: 1.4;
           margin-right: 2.3rem;
 
+          @media (max-width: $small-screen) {
+            width: auto;
+          }
+
         }
 
         .date {
@@ -133,6 +137,12 @@
 
         }
 
+      }
+
+      .rem-space-float {
+        @media (max-width: $small-screen) {
+          overflow: initial;
+        }
       }
 
       .app-description {
