--- a/app/client/templates/components/app-table.scss
+++ b/app/client/templates/components/app-table.scss
@@ -5,6 +5,7 @@
   margin-left: -$app-container-margin-lr;
   font-size: 0;
   display: block;
+  clear: both;
 
   @media screen and (max-width: $small-tablet) {
 
