added single app page

--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -1,6 +1,6 @@
 <template name="appItem">
 
-  <div class="app-item-container {{size}} {{#if installed app}}installed{{/if}}">
+  <div class="app-item-container {{size}} {{#if installed app}}installed{{/if}}" data-link="single-app">
 
     <div class="app-item-inner">
 
