--- a/app/client/templates/components/app-item.scss
+++ b/app/client/templates/components/app-item.scss
@@ -11,6 +11,7 @@
   padding-top: $app-container-margin-tb;
   padding-bottom: $app-container-margin-tb;
   box-sizing: border-box;
+  cursor: pointer;
 
   .app-item-inner {
 
